--- a/app/views/kids/index.html.erb
+++ b/app/views/kids/index.html.erb
@@ -6,7 +6,7 @@
       <th>Name</th>
       <th>Login</th>
       <th>Classroom</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -16,6 +16,7 @@
         <td><%= kid.full_name %></td>
         <td><%= kid.login_id %></td>
         <td><%= kid.classroom_id %></td>
+        <td><%= link_to 'Play', play_kid_path(kid) %></td>
         <td><%= link_to 'Show', kid %></td>
         <td><%= link_to 'Edit', edit_kid_path(kid) %></td>
         <td><%= link_to 'Destroy', kid, method: :delete, data: { confirm: 'Are you sure?' } %></td>
