-- :: Added play link to kids show page

--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -31,5 +31,6 @@
   <%= @kid.primary_language %>
 </p>
 
+<%= link_to 'Play', play_kid_path(@kid) %> |
 <%= link_to 'Edit', edit_kid_path(@kid) %> |
 <%= link_to 'Back', kids_path %>
