-- :: Added reset route to bubble group status

--- a/app/views/bubble_group_statuses/show.html.erb
+++ b/app/views/bubble_group_statuses/show.html.erb
@@ -26,4 +26,5 @@
 </p>
 
 <%= link_to 'Edit', edit_bubble_group_status_path(@bubble_group_status) %> |
+<%= link_to 'Reset', reset_bubble_group_status_path(@bubble_group_status) %> |
 <%= link_to 'Back', bubble_group_statuses_path %>
