--- a/app/views/bubble_group_statuses/index.html.erb
+++ b/app/views/bubble_group_statuses/index.html.erb
@@ -8,7 +8,7 @@
       <th>Poset</th>
       <th>Pass counter</th>
       <th>Fail counter</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -22,6 +22,7 @@
         <td><%= bubble_group_status.fail_counter %></td>
         <td><%= link_to 'Show', bubble_group_status %></td>
         <td><%= link_to 'Edit', edit_bubble_group_status_path(bubble_group_status) %></td>
+        <td><%= link_to 'Reset', reset_bubble_group_status_path(bubble_group_status) %></td>
         <td><%= link_to 'Destroy', bubble_group_status, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
