--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,5 +8,7 @@
   <li><%= link_to "View Bubble Groups", bubble_groups_path %></li>
   <li><%= link_to "View Posets", posets_path %></li>
   <li><%= link_to "View Bubbles", bubbles_path %></li>
+
+  <li><%= link_to 'View Bubble Group Statuses', bubble_group_statuses_path %></li>
 </ul>
 
