--- a/app/views/bubble_group_statuses/show.html.erb
+++ b/app/views/bubble_group_statuses/show.html.erb
@@ -25,6 +25,7 @@
   <%= @bubble_group_status.fail_counter %>
 </p>
 
+<%= link_to 'Play', play_kid_path(@bubble_group_status.kid, bubble_group_id: @bubble_group_status.bubble_group.id) %> |
 <%= link_to 'Edit', edit_bubble_group_status_path(@bubble_group_status) %> |
 <%= link_to 'Reset', reset_bubble_group_status_path(@bubble_group_status) %> |
 <%= link_to 'Back', bubble_group_statuses_path %>
