--- a/app/views/bubble_groups/_form.html.erb
+++ b/app/views/bubble_groups/_form.html.erb
@@ -51,6 +51,11 @@
     Backward Poset: <%= f.file_field :backward_poset_file %>
   </div>
 
+  <h3>Upload Bubble Games</h3>
+  <div class="field">
+    Bubble Games: <%= f.file_field :bubble_game_file %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
