--- a/app/views/bubble_games/_form.html.erb
+++ b/app/views/bubble_games/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class="field">
     <%= f.label :bubble_id %><br>
-    <%= f.number_field :bubble_id %>
+    <%= f.collection_select :bubble_id, Bubble.all, :id, :name, include_blank: false %>
   </div>
   <div class="field">
     <%= f.label :game_id %><br>
-    <%= f.number_field :game_id %>
+    <%= f.collection_select :game_id, Game.all, :id, :name, include_blank: false %>
   </div>
   <div class="field">
     <%= f.label :skin %><br>
