-- :: Added correct vertical alignment

--- a/app/views/kids/play.html.erb
+++ b/app/views/kids/play.html.erb
@@ -29,7 +29,7 @@
           <h3>Active Bubbles in Full Poset (<%= @bubble_group_status.bubble_statuses.active.count %>)</h3>
         </td>
       </tr>
-      <tr>
+      <tr style="vertical-align:top;">
         <td>
           <ul>
             <% @available_bubbles.each do |status| %>
