--- a/app/views/bubble_group_statuses/index.html.erb
+++ b/app/views/bubble_group_statuses/index.html.erb
@@ -15,9 +15,9 @@
   <tbody>
     <% @bubble_group_statuses.each do |bubble_group_status| %>
       <tr>
-        <td><%= bubble_group_status.kid_id %></td>
-        <td><%= bubble_group_status.bubble_group_id %></td>
-        <td><%= bubble_group_status.poset_id %></td>
+        <td><%= link_to bubble_group_status.kid.full_name, bubble_group_status.kid %></td>
+        <td><%= link_to bubble_group_status.bubble_group.name, bubble_group_status.bubble_group %></td>
+        <td><%= link_to bubble_group_status.poset.name, bubble_group_status.poset %></td>
         <td><%= bubble_group_status.pass_counter %></td>
         <td><%= bubble_group_status.fail_counter %></td>
         <td><%= link_to 'Show', bubble_group_status %></td>
