-- :: added link to games index

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
   <li><%= link_to "View Bubble Groups", bubble_groups_path %></li>
   <li><%= link_to "View Posets", posets_path %></li>
   <li><%= link_to "View Bubbles", bubbles_path %></li>
+  <li><%= link_to "View Games", games_path %></li>
 
   <li><%= link_to 'View Bubble Group Statuses', bubble_group_statuses_path %></li>
 </ul>
