--- a/app/views/bubble_groups/index.html.erb
+++ b/app/views/bubble_groups/index.html.erb
@@ -1,13 +1,10 @@
-<h1>Listing bubble_groups</h1>
+<h1>Listing Bubble Groups</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th>Full poset</th>
-      <th>Forward poset</th>
-      <th>Backward poset</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,9 +14,6 @@
       <tr>
         <td><%= bubble_group.name %></td>
         <td><%= bubble_group.description %></td>
-        <td><%= bubble_group.full_poset_id %></td>
-        <td><%= bubble_group.forward_poset_id %></td>
-        <td><%= bubble_group.backward_poset_id %></td>
         <td><%= link_to 'Show', bubble_group %></td>
         <td><%= link_to 'Edit', edit_bubble_group_path(bubble_group) %></td>
         <td><%= link_to 'Destroy', bubble_group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -30,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Bubble group', new_bubble_group_path %>
+<%= link_to 'New Bubble Group', new_bubble_group_path %>
