-- :: Added name presence validation to bubbles. Added more links for easier creation / modification

--- a/app/views/bubble_groups/show.html.erb
+++ b/app/views/bubble_groups/show.html.erb
@@ -35,10 +35,11 @@
 <table>
   <% @bubble_group.bubbles.each do |bubble| %>
     <tr>
-      <td><%= link_to bubble.name || 'Untitled', bubble %></td>
+      <td><%= link_to bubble.name, bubble %></td>
     </tr>
   <% end %>
 </table>
 
+<%= link_to 'Add Bubble', new_bubble_path(bubble_group_id: @bubble_group) %> |
 <%= link_to 'Edit', edit_bubble_group_path(@bubble_group) %> |
 <%= link_to 'Back', bubble_groups_path %>
