--- a/app/views/bubbles/show.html.erb
+++ b/app/views/bubbles/show.html.erb
@@ -20,11 +20,15 @@
   <tr>
     <th>Game</th>
     <th>Params</th>
+    <th colspan="3"></th>
   </tr>
   <% @bubble.bubble_games.each do |bubble_game| %>
     <tr>
       <td><%= link_to bubble_game.game.name, bubble_game.game %></td>
       <td><%= bubble_game.game_params %></td>
+      <td><%= link_to 'Show', bubble_game %></td>
+      <td><%= link_to 'Edit', edit_bubble_game_path(bubble_game) %></td>
+      <td><%= link_to 'Destroy', bubble_game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
