--- a/app/views/bubble_group_statuses/show.html.erb
+++ b/app/views/bubble_group_statuses/show.html.erb
@@ -16,6 +16,11 @@
 </p>
 
 <p>
+  <strong>Active:</strong>
+  <%= @bubble_group_status.active %>
+</p>
+
+<p>
   <strong>Pass counter:</strong>
   <%= @bubble_group_status.pass_counter %>
 </p>
