-- :: Visual enhancements (and to forms) for easier viewing and modifying of data

--- a/app/views/bubble_group_statuses/index.html.erb
+++ b/app/views/bubble_group_statuses/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing bubble_group_statuses</h1>
+<h1>Bubble Group Statuses</h1>
 
 <table>
   <thead>
     <tr>
       <th>Kid</th>
       <th>Bubble group</th>
-      <th>Poset</th>
+      <th>Current Poset</th>
       <th>Pass counter</th>
       <th>Fail counter</th>
       <th colspan="4"></th>
@@ -29,6 +29,3 @@
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Bubble group status', new_bubble_group_status_path %>
