--- a/app/views/kids/play_game.html.erb
+++ b/app/views/kids/play_game.html.erb
@@ -9,15 +9,15 @@
     </tr>
     <tr>
       <td><%= link_to @bubble.name, @bubble %></td>
-      <td><%= link_to "BubbleGame-#{@bubble.id}-#{@game.id}", @bubble_game %></td>
+      <td><%= link_to @bubble_game.name, @bubble_game %></td>
       <td><%= link_to @game.name, @game %></td>
     </tr>
   </table>
 
   <div>
     <h3>Options</h3>
-    <%= link_to "Pass",  play_game_kid_path(@kid, bubble_id: @bubble.id, result: 'pass') %>
-    <%= link_to "Fail",  play_game_kid_path(@kid, bubble_id: @bubble.id, result: 'fail') %>
+    <%= link_to "Pass",  play_game_kid_path(@kid, bubble_id: @bubble.id, result: 'pass') %> |
+    <%= link_to "Fail",  play_game_kid_path(@kid, bubble_id: @bubble.id, result: 'fail') %> |
     <%= link_to "Enjoy", play_game_kid_path(@kid, bubble_id: @bubble.id, result: 'enjoy') %>
   </div>
 <% else %>
