--- a/app/views/posets/show.html.erb
+++ b/app/views/posets/show.html.erb
@@ -9,8 +9,8 @@
 <table>
   <thead>
     <tr>
-      <td>Source</td>
-      <td>Destination</td>
+      <th>Source</th>
+      <th>Destination</th>
     </tr>
   </thead>
   <% @poset.edges.each do |edge| %>
