--- a/app/views/bubbles/index.html.erb
+++ b/app/views/bubbles/index.html.erb
@@ -1,10 +1,9 @@
-<h1>Listing bubbles</h1>
+<h1>Bubbles</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
-      <th>Description</th>
       <th>Bubble group</th>
       <th colspan="3"></th>
     </tr>
@@ -13,9 +12,8 @@
   <tbody>
     <% @bubbles.each do |bubble| %>
       <tr>
-        <td><%= bubble.name %></td>
-        <td><%= bubble.description %></td>
-        <td><%= bubble.bubble_group_id %></td>
+        <td><%= link_to bubble.name, bubble %></td>
+        <td><%= link_to bubble.bubble_group.name, bubble.bubble_group %></td>
         <td><%= link_to 'Show', bubble %></td>
         <td><%= link_to 'Edit', edit_bubble_path(bubble) %></td>
         <td><%= link_to 'Destroy', bubble, method: :delete, data: { confirm: 'Are you sure?' } %></td>
