--- a/app/views/bubbles/show.html.erb
+++ b/app/views/bubbles/show.html.erb
@@ -15,15 +15,16 @@
   <%= link_to @bubble.bubble_group.name, @bubble.bubble_group %>
 </p>
 
-<h3>Bubble Games</h3>
 <table>
   <tr>
+    <th>Bubble Game</th>
     <th>Game</th>
     <th>Params</th>
     <th colspan="3"></th>
   </tr>
   <% @bubble.bubble_games.each do |bubble_game| %>
     <tr>
+      <td><%= link_to bubble_game.name, bubble_game %></td>
       <td><%= link_to bubble_game.game.name, bubble_game.game %></td>
       <td><%= bubble_game.game_params %></td>
       <td><%= link_to 'Show', bubble_game %></td>
