--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+  <div class="field">
+    <%= f.label :school %><br>
+    <%= f.collection_select :school_id, School.all, :id, :name %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
