--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,17 @@
+<p><u>Person Management</u></p>
 <ul>
   <li><%= link_to "View Kids", kids_path %></li>
   <li><%= link_to "View Classrooms", classrooms_path %></li>
   <li><%= link_to "View Schools", schools_path %></li>
+</ul>
 
+<p><u>Game Management</u></p>
+<ul>
   <li><%= link_to "View Bubble Groups", bubble_groups_path %></li>
+  <li><%= link_to 'View Bubble Group Statuses', bubble_group_statuses_path %></li>
   <li><%= link_to "View Posets", posets_path %></li>
   <li><%= link_to "View Games", games_path %></li>
-
-  <li><%= link_to 'View Bubble Group Statuses', bubble_group_statuses_path %></li>
+  <li><%= link_to "View Bubbles", bubbles_path %></li>
+  <li><%= link_to "View Bubble-Games", bubble_games_path %></li>
 </ul>
 
