--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Classroom:</strong>
-  <%= @kid.classroom_id %>
+  <%= link_to @kid.classroom.name, @kid.classroom if @kid.classroom %>
 </p>
 
 <p>
@@ -15,11 +15,11 @@
   <%= @kid.first_name %>
 </p>
 <p>
-  <strong>Last Name</strong>
+  <strong>Last Name:</strong>
   <%= @kid.last_name %>
 </p>
 <p>
-  <strong>Gender</strong>
+  <strong>Gender:</strong>
   <%= @kid.gender %>
 </p>
 <p>
@@ -32,5 +32,6 @@
 </p>
 
 <%= link_to 'Play', play_kid_path(@kid) %> |
+<%= link_to 'Play Games', play_game_kid_path(@kid) %> |
 <%= link_to 'Edit', edit_kid_path(@kid) %> |
 <%= link_to 'Back', kids_path %>
