--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,9 +1,10 @@
-<h1>Listing schools</h1>
+<h1>Schools</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
+      <th>Classrooms</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +13,7 @@
     <% @schools.each do |school| %>
       <tr>
         <td><%= school.name %></td>
+        <td><%= school.classrooms.count %></td>
         <td><%= link_to 'Show', school %></td>
         <td><%= link_to 'Edit', edit_school_path(school) %></td>
         <td><%= link_to 'Destroy', school, method: :delete, data: { confirm: 'Are you sure?' } %></td>
