--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -33,5 +33,6 @@
 
 <%= link_to 'Play', play_kid_path(@kid) %> |
 <%= link_to 'Play Games', play_game_kid_path(@kid) %> |
+<%= link_to 'Show Games', games_kid_path(@kid) %> |
 <%= link_to 'Edit', edit_kid_path(@kid) %> |
 <%= link_to 'Back', kids_path %>
