-- :: Added bubble categories and their links to bubbles. Updated necessary forms and displays to show them.

--- a/app/views/bubbles/_form.html.erb
+++ b/app/views/bubbles/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :bubble_group_id %><br>
     <%= f.collection_select :bubble_group_id, BubbleGroup.all, :id, :name %>
   </div>
+  <div class="field">
+    <%= f.label :bubble_category_id %><br>
+    <%= f.collection_select :bubble_category_id, BubbleCategory.all, :id, :name %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
