--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,5 +13,6 @@
   <li><%= link_to "View Games", games_path %></li>
   <li><%= link_to "View Bubbles", bubbles_path %></li>
   <li><%= link_to "View Bubble-Games", bubble_games_path %></li>
+  <li><%= link_to "View Bubble Categories", bubble_categories_path %></li>
 </ul>
 
