-- :: Added csv parsers for various bubble category files

--- a/app/views/bubble_groups/_form.html.erb
+++ b/app/views/bubble_groups/_form.html.erb
@@ -56,6 +56,11 @@
     Bubble Games: <%= f.file_field :bubble_game_file %>
   </div>
 
+  <h3>Upload Bubble Categories</h3>
+  <div class="field">
+    Bubble Categories: <%= f.file_field :bubble_category_file %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
