--- a/app/views/triggers/show.html.erb
+++ b/app/views/triggers/show.html.erb
@@ -1,18 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Source:</strong>
-  <%= @trigger.source_id %>
+  <strong>Bubble:</strong>
+  <%= link_to @trigger.bubble.try(:name), @trigger.bubble %>
 </p>
 
 <p>
-  <strong>Destination:</strong>
-  <%= @trigger.destination_id %>
-</p>
-
-<p>
-  <strong>Poset:</strong>
-  <%= @trigger.poset_id %>
+  <strong>Bubble Group:</strong>
+  <%= link_to @trigger.bubble_group.try(:name), @trigger.bubble_group %>
 </p>
 
 <%= link_to 'Edit', edit_trigger_path(@trigger) %> |
