--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,5 +14,6 @@
   <li><%= link_to "View Bubbles", bubbles_path %></li>
   <li><%= link_to "View Bubble-Games", bubble_games_path %></li>
   <li><%= link_to "View Bubble Categories", bubble_categories_path %></li>
+  <li><%= link_to "View Triggers", triggers_path %></li>
 </ul>
 
