-- :: Promoted the bubble group status active field from a boolean to an integer and updated all appropriate forms

--- a/app/views/bubble_group_statuses/_form.html.erb
+++ b/app/views/bubble_group_statuses/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :active %>
-    <%= f.check_box :active %>
+    <%= f.select :active, BubbleGroupStatus::ACTIVE_SELECT_OPTIONS, include_blank: false %>
   </div>
   <div class="field">
     <%= f.label :pass_counter %><br>
