--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -25,8 +25,7 @@
           <td>
             <% status = kid.bubble_group_statuses.find_by(bubble_group: bubble_group) %>
             <% if status %>
-              <%= hidden_field_tag "active[#{status.id}]", '0' %>
-              <%= check_box_tag "active[#{status.id}]", '1', status.active %>
+              <%= select_tag "active[#{status.id}]", options_for_select(BubbleGroupStatus::ACTIVE_SELECT_OPTIONS, status.active) %>
             <% end %>
           </td>
         <% end %>
