-- :: Updated bubble group status show page to show active human name

--- a/app/views/bubble_group_statuses/show.html.erb
+++ b/app/views/bubble_group_statuses/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Active:</strong>
-  <%= @bubble_group_status.active %>
+  <%= @bubble_group_status.human_active_string %>
 </p>
 
 <p>
