#11 Login functionality and page for Teacher user role

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,4 +1,4 @@
-<div id="kmLoginPage">
+<!-- <div id="kmLoginPage">
   <div class="container-fluid" id="kmLoginHeader">
     <div class="row">
       <div class="col-md-12 text-center font-brand">
@@ -50,4 +50,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
