--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -5,6 +5,8 @@
     <tr>
       <th>Name</th>
       <th>School</th>
+      <th>Type</th>
+      <th>Teacher</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +16,8 @@
       <tr>
         <td><%= link_to classroom.name, classroom %></td>
         <td><%= link_to classroom.school.name, classroom.school if classroom.school %></td>
+        <td><%= classroom.class_type.type_name if classroom.class_type %></td>
+        <td><%= classroom.teacher.full_name if classroom.teacher %></td>
         <td><%= link_to 'Show', classroom %></td>
         <td><%= link_to 'Edit', edit_classroom_path(classroom) %></td>
         <td><%= link_to 'Destroy', classroom, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -25,3 +29,4 @@
 <br>
 
 <%= link_to 'New Classroom', new_classroom_path %>
+<%= link_to 'Back', root_path %>
