--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <% if user_signed_in? %>
-   Signed in as <%= current_user.first_name %>. Not you?
+   Signed in as <%= current_user.full_name %>. 
    <%= link_to "Edit profile", edit_user_registration_path %>
    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
 
