--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -3,24 +3,24 @@
     <div class="container">
       <ul class="nav nav-tabs nav-justified">
         <li role="presentation" class="active">
-          <%= link_to '#asd' do%>
+          <%= link_to '#dashboard', data: {toggle: 'tab'} do%>
             Dashboard
             <span class="caret"></span>
           <% end %>
         </li>
         <li role="presentation">
-          <%= link_to '#asd' do%>
+          <%= link_to '#classroom', data: {toggle: 'tab'} do%>
             Classroom
             <span class="caret"></span>
           <% end %>
         </li>
         <li role="presentation">
-          <%= link_to '#asd' do%>
+          <%= link_to '#activities', data: {toggle: 'tab'} do%>
             Activities
           <% end %>
         </li>
         <li role="presentation">
-          <%= link_to '#asd' do%>
+          <%= link_to '#teacher_mode', data: {toggle: 'tab'} do%>
             Teacher Mode
           <% end %>
         </li>
@@ -87,9 +87,29 @@
       <% end %>
     </div>
     <% 5.times do |index| %>
-      <div class="col-md-2">
+      <div class="col-md-2 apt-col">
         <div class="grid" style="height: <%= total_grid_height %>px;">
-          <div class="apt-bar" style="height: <%= kids_count_per_timegroup[index] * row_height %>px;"></div>
+          <% current_row_height = kids_count_per_timegroup[index] * row_height %>
+          <% if current_row_height * 2 > total_grid_height %>
+            <% tooltip_position = 'bottom' %>
+            <% tooltip_anchor = "top: #{total_grid_height - current_row_height + row_height}px;" %>
+          <% else %>
+            <% tooltip_position = 'top' %>
+            <% tooltip_anchor = "bottom: #{current_row_height}px;" %>
+          <% end %>
+          <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
+          <div class="apt-tip <%= tooltip_position %>" style="<%= tooltip_anchor %>">
+            <div class="apt-tip-content text-center">
+              <h4>Kids</h4>
+              <ul class="list-unstyled">
+                <% kids_count_per_timegroup[index].times do |i| %>
+                  <li>
+                    <%= link_to "First Last#{i}", 'javascript:;' %>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
         </div>
         <div class="apt-x-axis text-center font-xxlarge">
           <%= "#{24 * index} - #{24 * (index + 1)} minutes" %>
@@ -108,3 +128,216 @@
     </div>
   </div>
 </div>
+
+<div class="container kmSection">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <ul class="nav nav-pills simple bordered nav-justified font-xlarge">
+        <li role="presentation" class="active"><a href="#kindergarten" data-toggle="pill">Kindergarten</a></li>
+        <li role="presentation"><a href="#first_grade" data-toggle="pill">First Grade</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row kmSection text-center">
+    <div class="dropdown simple">
+      <a href="javascript:;" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        <span>Classroom 1</span>
+        <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu dropdown-menu-right">
+        <li><a href="#">Classroom 2</a></li>
+        <li><a href="#">Classroom 3</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row kmSection">
+    <ul class="nav nav-pills simple nav-justified">
+      <li role="presentation" class="active"><a href="#count_card_20" data-toggle="pill">Counting and Cardianlity to 20</a></li>
+      <li role="presentation"><a href="#base_10" data-toggle="pill">Base 10</a></li>
+      <li role="presentation"><a href="#number_line_model" data-toggle="pill">Number line model</a></li>
+      <li role="presentation"><a href="#add_sub_all" data-toggle="pill">Addition and Subtraction: Count All</a></li>
+    </ul>
+  </div>
+
+</div>
+
+<div class="container kmSection">
+  <div class="tab-content">
+    <div class="tab-pane active" id="count_card_20" role="tabpanel">
+      <div class="row">
+        <div class="col-md-6">
+          <% rows_count = 10 %>
+          <% percentages = [75, 25] %>
+          <%# one row has a height of 40px %>
+          <% row_height = 40 %>
+          <% total_grid_height = rows_count * row_height %>
+          <div class="row apt-title text-center">
+            <div class="col-md-12">
+              <h3>Count</h3>
+            </div>
+          </div>
+          <div class="row apt-body">
+            <div class="col-md-2 font-xxlarge text-right apt-y-axis">
+              <% (1..rows_count).to_a.reverse.each do |item| %>
+                <div><%= item * 10 %>%</div>
+              <% end %>
+            </div>
+            <div class="col-md-10">
+              <div class="row">
+                <% 2.times do |index| %>
+                  <div class="col-md-6 apt-col">
+                    <div class="grid" style="height: <%= total_grid_height %>px;">
+                      <% current_row_height = percentages[index] * row_height / 10 %>
+                      <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
+                    </div>
+                    <div class="apt-x-axis text-center font-xxlarge">
+                      <%= "#{10 * index + (index/100.0).ceil} - #{10 * (index + 1)}" %>
+                    </div>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <% rows_count = 10 %>
+          <% percentages = [75, 25] %>
+          <%# one row has a height of 40px %>
+          <% row_height = 40 %>
+          <% total_grid_height = rows_count * row_height %>
+          <div class="row apt-title text-center">
+            <div class="col-md-12">
+              <h3>Produce</h3>
+            </div>
+          </div>
+          <div class="row apt-body">
+            <div class="col-md-2 font-xxlarge text-right apt-y-axis">
+              <% (1..rows_count).to_a.reverse.each do |item| %>
+                <div><%= item * 10 %>%</div>
+              <% end %>
+            </div>
+            <div class="col-md-10">
+              <div class="row">
+                <% 2.times do |index| %>
+                  <div class="col-md-6 apt-col">
+                    <div class="grid" style="height: <%= total_grid_height %>px;">
+                      <% current_row_height = percentages[index] * row_height / 10 %>
+                      <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
+                    </div>
+                    <div class="apt-x-axis text-center font-xxlarge">
+                      <%= "#{10 * index + (index/100.0).ceil} - #{10 * (index + 1)}" %>
+                    </div>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="tab-pane" id="base_10" role="tabpanel">
+      <% rows_count = 10 %>
+      <% percentages = [15, 40, 10, 80] %>
+      <%# one row has a height of 40px %>
+      <% row_height = 40 %>
+      <% total_grid_height = rows_count * row_height %>
+      <div class="row apt-title text-center">
+        <div class="col-md-12">
+          <h3>Count</h3>
+        </div>
+      </div>
+      <div class="row apt-body">
+        <div class="col-md-1 font-xxlarge text-right apt-y-axis">
+          <% (1..rows_count).to_a.reverse.each do |item| %>
+            <div><%= item * 10 %>%</div>
+          <% end %>
+        </div>
+        <div class="col-md-11">
+          <div class="row">
+            <% 4.times do |index| %>
+              <div class="col-md-3 apt-col">
+                <div class="grid" style="height: <%= total_grid_height %>px;">
+                  <% current_row_height = percentages[index] * row_height / 10 %>
+                  <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
+                </div>
+                <div class="apt-x-axis text-center font-xxlarge">
+                  <%= "#{5 * index + (index/100.0).ceil} - #{5 * (index + 1)} minutes" %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+
+      <% rows_count = 10 %>
+      <% percentages = [15, 40, 10, 80] %>
+      <%# one row has a height of 40px %>
+      <% row_height = 40 %>
+      <% total_grid_height = rows_count * row_height %>
+      <div class="row apt-title text-center">
+        <div class="col-md-12">
+          <h3>Produce</h3>
+        </div>
+      </div>
+      <div class="row apt-body">
+        <div class="col-md-1 font-xxlarge text-right apt-y-axis">
+          <% (1..rows_count).to_a.reverse.each do |item| %>
+            <div><%= item * 10 %>%</div>
+          <% end %>
+        </div>
+        <div class="col-md-11">
+          <div class="row">
+            <% 4.times do |index| %>
+              <div class="col-md-3 apt-col">
+                <div class="grid" style="height: <%= total_grid_height %>px;">
+                  <% current_row_height = percentages[index] * row_height / 10 %>
+                  <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
+                </div>
+                <div class="apt-x-axis text-center font-xxlarge">
+                  <%= "#{5 * index + (index/100.0).ceil} - #{5 * (index + 1)} minutes" %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="tab-pane" id="number_line_model" role="tabpanel">
+      <% rows_count = 10 %>
+      <% percentages = [100, 80, 40, 20] %>
+      <%# one row has a height of 40px %>
+      <% row_height = 40 %>
+      <% total_grid_height = rows_count * row_height %>
+      <div class="row apt-body">
+        <div class="col-md-1 font-xxlarge text-right apt-y-axis">
+          <% (1..rows_count).to_a.reverse.each do |item| %>
+            <div><%= item * 10 %>%</div>
+          <% end %>
+        </div>
+        <div class="col-md-11">
+          <div class="row">
+            <% 4.times do |index| %>
+              <div class="col-md-3 apt-col">
+                <div class="grid" style="height: <%= total_grid_height %>px;">
+                  <% current_row_height = percentages[index] * row_height / 10 %>
+                  <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
+                </div>
+                <div class="apt-x-axis text-center font-xxlarge">
+                  <%= "#{5 * index + (index/100.0).ceil} - #{5 * (index + 1)}" %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<div class="container kmSection"></div>
