Update seed and in app/views/classrooms/_form.html.erb added condition in label Teacher 'if current_user.admin?'

--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -21,7 +21,11 @@
   </div>
   <div class="field">
     <%= f.label "Teacher" %><br>
+    <%if current_user.admin? %>
+    <%= f.collection_select :user_id, User.teachers, :id, :full_name, include_blank: true %>
+    <%else%>
     <%= f.collection_select :user_id, User.teachers, :id, :full_name, { selected: current_user.id } %>
+    <% end %>
   </div>
   <div class="field">
     <%= f.label "Classroom type" %><br>
