--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -9,13 +9,12 @@
           <% end %>
         </li>
         <li role="presentation">
-          <%= link_to '#classroom', data: {toggle: 'tab'} do%>
+          <%= link_to classrooms_path do%>
             Classroom
-            <span class="caret"></span>
           <% end %>
         </li>
         <li role="presentation">
-          <%= link_to '#activities', data: {toggle: 'tab'} do%>
+          <%= link_to bubble_groups_path  do%>
             Activities
           <% end %>
         </li>
