--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
         <div class="col-md-7">
           <div class="media">
             <div class="media-body media-left media-middle text-right">
-              <h1>Welcome, <%= current_user.last_name %></h1>
+              <h1>Welcome, <%= current_user.first_name %></h1>
             </div>
             <div class="media-left media-right media-middle">
               <%= image_tag 'avatar.png', class: 'img-responisve img-circle' %>
@@ -22,8 +22,8 @@
                   <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
+                  <li><%= link_to "Edit profile", edit_user_registration_path %></li>
+                  <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
                 </ul>
               </div>
             </div>
